[project]
name = "capyswarm"
version = "0.1.0"
authors = [
    {name = "Cooper Miller"},
]
description = "A Scrapybara multi-agent orchestration framework forked from OpenAI's Swarm"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pytest",
    "requests",
    "tqdm",
    "pre-commit",
    "instructor",
    "scrapybara",
]